Update tree page

--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@
         </div>
         <div class="row">
 
+            <div class="col-lg-4 col-md-6 portfolio-item">
+                <a href="http://www.yidizhu.com/tree.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>Project SHU</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/tree.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">Course Project | Networked Oculus</p>
+            </div>
+
              <div class="col-lg-4 col-md-6 portfolio-item">
                 <a href="http://www.yidizhu.com/maestro.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
