--- a/tree.html
+++ b/tree.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yidi | Maestro</title>
+    <title>Yidi | Tree</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -69,7 +69,7 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2>Maestro</h2>
+                <h2>SHU</h2>
                 <hr class="star-primary">
                 <h3>General Information</h3>
                 <div class="table-responsive">
@@ -77,12 +77,12 @@
                     <tbody>
                         <tr>
                             <td>Project Duration</td>
-                            <td>2 weeks</td>
+                            <td>3 weeks</td>
                         </tr>
 
                         <tr>
                             <td>Team Size</td>
-                            <td>4</td>
+                            <td>5</td>
                         </tr>
                         
                         <tr>
@@ -92,7 +92,7 @@
 
                         <tr>
                             <td>Theme</td>
-                            <td>Naïve guest + Feeling of freedom</td>
+                            <td>Festival</td>
                         </tr>
 
                         <tr>
@@ -101,25 +101,27 @@
                         </tr>
                     </tbody>
                     </table>
-                    <p class="notes">
-                        At ETC, the notion of <b>guest</b> is used to keep the mindset that <b>players</b> are not <b>users</b>. We see players more in the way Disney sees their guests.
-                    </p>
                 </div>
                 <!-- /table-responsive -->
                 <hr class="star-primary">
 
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/H-52hrKzx5A" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/ATJOrfhj1do" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <hr class="star-primary">
                 <h3>Brief Description</h3>
                 <p>
-                    This game delivers the feel of freedom by giving the guest the ability to conduct music and change the whole world with his way of conducting.
+                    SHU is a Two-player Oculus Game where players cooperate with each other to overcome obstacles and reach their destination. Players will build up relationship during the journey and experience the world with stunning visuals, haunting music and unique gameplay.
                 </p>
 
+                <h3>Design Phiolosophy</h3>
                 <p>
                     I firmly believe that each game should have a clear design goal that every design decision should serve, and several design pillars that every design decision should follow.
                 </p>
+
+                <h3>Design Problems and Solutions</h3>
+                <h4>Get the player look around</h4>
+                <h4>Damage players in VR</h4>
 
                 <p class="notes text-center">To be continued... Website still under construction</p>
 
