--- a/tree.html
+++ b/tree.html
@@ -97,7 +97,7 @@
 
                         <tr>
                             <td>Platform</td>
-                            <td>2 Network Oculus <i>(or Oculi?)</i></td>
+                            <td>2 Networked Oculus <i>(or Oculi?)</i></td>
                         </tr>
                     </tbody>
                     </table>
