--- a/yicon.html
+++ b/yicon.html
@@ -69,29 +69,60 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2 style="text-align: center">YiCon</h2>
+                <h2>YiCon</h2>
                 <hr class="star-primary">
-                <div style="text-align: center">
-                    <ul>
-                    <li>
-                        <strong>Date:</strong> November 2016
-                    </li>
-                    <li>
-                        <strong>Type:</strong> Serious Game - Construction Simulation
-                    </li>
-                    <li>
-                        <strong>Role:</strong> Game designer & programmer
-                    </li>
-                    <li>
-                        <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i
-                                class="fa fa-download" aria-hidden="true"></i> Download</a>
-                    </li>
-                    <li>
-                        <a href="resources/articles/fyp/user's-manual.pdf"><i class="fa fa-book"
-                                                                              aria-hidden="true"></i> User's
-                            Manual</a>
-                    </li>
-                </ul>
+                <h3>General Information</h3>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                    <tbody>
+                        <tr>
+                            <td>Project Duration</td>
+                            <td>9 months</td>
+                        </tr>
+
+                        <tr>
+                            <td>Completion Date</td>
+                            <td>November 11 2016</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team Size</td>
+                            <td>1 (solo project)</td>
+                        </tr>
+
+                        <tr>
+                            <td>Genre</td>
+                            <td>Serious game - Construction project simulation</td>
+                        </tr>
+
+                        <tr>
+                            <td>Platform</td>
+                            <td>PC</td>
+                        </tr>
+                    </tbody>
+                    </table>
+                    <hr class="star-primary">
+                    <table class="table">
+                    <tbody>
+                        <tr>
+                            <td colspan="2" class="additional-item">
+                                <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>  Download the game</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td colspan="2" class="additional-item">
+                                <a href="http://www.yidizhu.com/resources/documents/yi-con-manual.pdf" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>  Manual</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td colspan="2" class="additional-item">
+                                <a href="https://docs.google.com/presentation/d/1Ulw18wLfr8M6iTSeXTvYHvC_AwO76GKaA605ejKQ_Tc/edit?usp=sharing" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>  Presentation slides</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                    </table>
                 </div>
                 <hr class="star-primary">
                 <div class="portfolio-description">
