--- a/primal-life.html
+++ b/primal-life.html
@@ -69,24 +69,52 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2 style="text-align: center">Totally Accurate Primitive Simulator <br>(Primal Life)</h2>
+                <h2>Totally Accurate Primitive Simulator <br>(Primal Life)</h2>
                 <hr class="star-primary">
-                <div style="text-align: center">
-                    <ul>
-                    <li>
-                        <strong>Date:</strong> November 2016
-                    </li>
-                    <li>
-                        <strong>Type:</strong> 3D Low-poly Survival Game
-                    </li>
-                    <li>
-                        <strong>Role:</strong> Game designer, level designer, animator, programmer
-                    </li>
-                    <li>
-                        <a href="https://github.com/COMP4122/COMP4122/releases"><i class="fa fa-download"
-                                                                                   aria-hidden="true"></i> Download</a>
-                    </li>
-                </ul>
+
+                <h3>General Information</h3>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                    <tbody>
+                        <tr>
+                            <td>Date</td>
+                            <td>November 2016</td>
+                        </tr>
+
+                        <tr>
+                            <td>Project Duration</td>
+                            <td>4 weeks</td>
+                        </tr>
+
+                        <tr>
+                            <td>Team Size</td>
+                            <td>4</td>
+                        </tr>
+                        
+                        <tr>
+                            <td>Genre</td>
+                            <td>3D low-poly action game</td>
+                        <tr>
+                            <td>My Contributions</td>
+                            <td>Level design, modeling, animation, gameplay programming</td>
+                        </tr>
+
+                        <tr>
+                            <td>Platform</td>
+                            <td>PC</td>
+                        </tr>
+                    </tbody>
+                    </table>
+                    <hr class="star-primary">
+                    <table class="table">
+                    <tbody>
+                        <tr>
+                            <td colspan="2" class="additional-item">
+                                <a href="https://github.com/COMP4122/COMP4122/releases" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>  Download the game</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                    </table>
                 </div>
                 <hr class="star-primary">
                 <div class="portfolio-description">
