--- a/tree.html
+++ b/tree.html
@@ -73,7 +73,7 @@
                 <hr class="star-primary">
                 <h3>General Information</h3>
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-striped">
                     <tbody>
                         <tr>
                             <td>Project Duration</td>
