--- a/yicon.html
+++ b/yicon.html
@@ -112,7 +112,7 @@
 
                         <tr>
                             <td colspan="2" class="additional-item">
-                                <a href="http://www.yidizhu.com/resources/documents/yi-con-manual.pdf" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>  Manual</a>
+                                <a href="http://www.yidizhu.com/resources/documents/yi-con-manual.pdf" target="_blank"><i class="<i class="fa fa-book" aria-hidden="true"></i>" aria-hidden="true"></i>  Manual</a>
                             </td>
                         </tr>
 
