Add two paragraphs to tree friends

--- a/tree.html
+++ b/tree.html
@@ -122,7 +122,13 @@
                 <h3>Design Problems and Solutions</h3>
                 <h4>Get the player look around</h4>
                 <h4>Damage players in VR</h4>
+                <p>
+                    <b>Problem 1:</b> Unlike games on PC, it's tricky to like the players know that they are damaged in VR. On PC, designers can use full screen effects like in Call of Duty series, or screen shaking, or move players around depending on the damage source. In VR, if any one of these are designed and implemented improperly, motion sickness will come to the player quickly.
+                </p>
 
+                <p>
+                    <b>Solution 1:</b> The solution we came up with is to use post-processing effects + sound effects + slight movement of player. 
+                </p>
                 <p class="notes text-center">To be continued... Website still under construction</p>
 
             </article>
