--- a/you-are-fired.html
+++ b/you-are-fired.html
@@ -109,7 +109,16 @@
                     <iframe src="https://www.youtube.com/embed/NhGNq0G6KHs" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <hr class="star-primary">
+                <h3>Brief Description</h3>
+                <p>
+                    This project is built for round 4 of <i>Building Virtual Worlds</i> at <i>Entertainment Technology Center</i>. The focus of this round is to tell an engaging interactive story. 
 
+                </p>
+
+                <p>
+                    The platform we chose is Virtuix Omni + Oculus Touch. Omni is a new platform aiming at solving the movement problem in VR. However, walking in Omni by no means feels like walking in real life. In stead, it's more like walking on ice or walking in dreams. So we decided to embrace the nature of Omni and design around it.
+                </p>
+                
                 <p class="notes text-center">To be continued... Website still under construction</p>
 
             </article>
