--- a/tree.html
+++ b/tree.html
@@ -127,7 +127,7 @@
                 </p>
 
                 <p>
-                    <b>Solution 1:</b> The solution we came up with is to use post-processing effects + sound effects + slight movement of player. 
+                    <b>Solution 1:</b> The solution we came up with is to use post-processing effects + sound effects + slight movement of player. The post-processing effects make the image blurring and produce longer visual staying, which simulates real life scenarios. Sound effects enhance the signal of getting hit. And as the image is blurry, slightly moving the player will not cause much motion sickness.
                 </p>
                 <p class="notes text-center">To be continued... Website still under construction</p>
 
