Update heading spacing

--- a/tree.html
+++ b/tree.html
@@ -129,6 +129,22 @@
                 <p>
                     <b>Solution 1:</b> The solution we came up with is to use post-processing effects + sound effects + slight movement of player. The post-processing effects make the image blurring and produce longer visual staying, which simulates real life scenarios. Sound effects enhance the signal of getting hit. And as the image is blurry, slightly moving the player will not cause much motion sickness.
                 </p>
+
+                <p>
+                    <b>Problem 2:</b> Tricky rules.
+                </p>
+
+                <p>
+                    <b>Problem 3:</b> Get naive guests to do multiple activities.
+                </p>
+
+                <p>
+                    <b>Problem 4:</b> Missed feedback
+                </p>
+
+                <p>
+                    <b>Problem 5:</b> How to encourage communications between players
+                </p>
                 <p class="notes text-center">To be continued... Website still under construction</p>
 
             </article>
