--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yidi | Sound Bearier</title>
+    <title>Yidi | About</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -72,57 +72,21 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2>The Soundbearier</h2>
+                <h2>Crafting artistic meaningful games</h2>
+                <br>
                 <hr class="star-primary">
-                <h3>General Information</h3>
-                <div class="table-responsive">
-                    <table class="table table-striped">
-                    <tbody>
-                        <tr>
-                            <td>Project Duration</td>
-                            <td>2 weeks</td>
-                        </tr>
-
-                        <tr>
-                            <td>Team Size</td>
-                            <td>5</td>
-                        </tr>
-                        
-                        <tr>
-                            <td>My Contributions</td>
-                            <td>Programming, testing</td>
-                        </tr>
-
-                        <tr>
-                            <td>Theme</td>
-                            <td>The guest helps character A who is afraid of character B</td>
-                        </tr>
-
-                        <tr>
-                            <td>Platform</td>
-                            <td>Hololens + Handmade props</td>
-                        </tr>
-                    </tbody>
-                    </table>
-                    <p class="notes">
-                        At ETC, the notion of <b>guest</b> is used to keep the mindset that <b>players</b> are not <b>users</b>. We see players more in the way Disney sees their guests.
-                    </p>
-                </div>
-                <!-- /table-responsive -->
-
-                <hr class="star-primary">
-
-                <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/oUs442UmtII" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <hr class="star-primary">
-                <h3>Brief Description</h3>
+                <br>
                 <p>
-                    In this project, we leveraged the capabilities of Hololens as much as we could. Although this world is quite tiny with player time less than 2 minutes, we used <i>voice recognition</i>, <i>gazing</i>, <i>gesture detection</i>, <i>movement</i>, <i>spatial mapping</i>, and <i>occulusion mapping</i>.
+                    Hi there, I'm Yidi! I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>. I dedicate myself to making  fun and meaningful games.
                 </p>
-
-
-                <p class="notes text-center">To be continued... Website still under construction</p>
+                
+                <p>
+                    As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tricky design challenge through collaboration, playtesting and iterations.
+                </p>
+                <p>
+                    As a game programmer, I am fascinated with the power of programming and am always willing to
+                        pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
+                </p>
 
             </article>
         </div>
