--- a/blog.html
+++ b/blog.html
@@ -41,13 +41,16 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#portfolio">Portfolio</a>
+                    <a href="http://www.yidizhu.com/#game-design">Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/blog.html">Blog</a>
+                    <a href="http://www.yidizhu.com/#game-programming">Programming</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="resources/resume.pdf">Resume</a>
+                    <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="http://www.yidizhu.com/about.html">About</a>
                 </li>
                 <!--
                 <li class="page-scroll">
