--- a/bopit.html
+++ b/bopit.html
@@ -44,13 +44,16 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-design">Game Design</a>
+                    <a href="http://www.yidizhu.com/#game-design">Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-programming">Game Programming</a>
+                    <a href="http://www.yidizhu.com/#game-programming">Programming</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="http://www.yidizhu.com/about.html">About</a>
                 </li>
                 <!--
                 <li class="page-scroll">
