--- a/yicon.html
+++ b/yicon.html
@@ -44,13 +44,16 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-design">Game Design</a>
+                    <a href="http://www.yidizhu.com/#game-design">Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-programming">Game Programming</a>
+                    <a href="http://www.yidizhu.com/#game-programming">Programming</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="http://www.yidizhu.com/about.html">About</a>
                 </li>
                 <!--
                 <li class="page-scroll">
@@ -148,7 +151,7 @@
                         the design and development of this game, so I familiarized myself with the status of
                         serious game research. During the design stage, I referred to a real construction project
                         to make this game more realistic, and I practiced designing games with the DPE framework,
-                        which was proposed by Prof. Brian W. in 2007. I also` got a taste of conducting play test
+                        which was proposed by Prof. Brian W. in 2007. I also got a taste of conducting play test
                         sessions during the evaluation of this stage. Although I did not have enough time to modify
                         the game design based on players’ feedback, I realized the importance of sufficient play
                         tests during game development.
