--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#game-design">Game Design</a>
+                    <a href="#game-design">Design</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#game-programming">Game Programming</a>
+                    <a href="#game-programming">Programming</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="http://www.yidizhu.com/about.html">About</a>
                 </li>
                 <!--
                 <li class="page-scroll">
