--- a/about.html
+++ b/about.html
@@ -88,6 +88,9 @@
                         pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
                 </p>
 
+                <hr class="star-primary">
+                <br>
+                <h3 class="text-center"> <a href="http://www.yidizhu.com/blog"> Read my blog </a></h3>
             </article>
         </div>
     </div>
