Add a border on mobile

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="http://www.yidizhu.com/tree.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
-                            <i>Project SHU</i>
+                            <i>Althea</i>
                         </div>
                     </div>
                     <img src="resources/images/portfolio/tree.png" class="img-responsive" alt="">
