update about page

--- a/about.html
+++ b/about.html
@@ -72,25 +72,53 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2>Crafting artistic meaningful games</h2>
-                <br>
+                <h3>Who am I?</h3>
                 <hr class="star-primary">
-                <br>
                 <p>
-                    Hi there, I'm Yidi! I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>. I dedicate myself to making  fun and meaningful games.
-                </p>
-                
-                <p>
-                    As a game designer, I see games as art and an extremely expressive medium. I love making visually stunning games with innovative interactions and rich feedback that invoke something deep from players' mind, and I enjoy tricky design challenge through collaboration, playtesting and iterations.
-                </p>
-                <p>
-                    As a game programmer, I am fascinated with the power of programming and am always willing to
-                        pick up new skills and experiment with new technologies. Thanks to my background in building engineering, I am highly skilled in calculus, engineering mathematics, and classical mechanics, which makes it easier for me to pick up new programming skills.
+                    My name is Yidi. I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>, and expect to graduate in May 2019.
                 </p>
 
+                <p>
+                    I'm also remotely leading a small indie game company based in Hong Kong. We dedicate ourselves to making games that are delicate and intrinsically fun.
+                </p>
+
+                <h3>What do I do?</h3>
                 <hr class="star-primary">
+                <p>
+                    I make games. Sometimes also other interactive experiences. It's my dream to spend my life making games and it's coming true.
+                </p>
+
+                <h3>What's my design philosophy?</h3>
+
+                <hr class="star-primary">
+                <p>
+                    <i>(i.e. How to be sure we can happily work together)</i>
+                </p>
+
+                <p><b>1. Games are art.</b></p>
+                <p>
+                    I'm a advocate for <b>"Games are art"</b>. Not only because they can be visually and aurally stunning, but also becuase they are an powerful medium that can invoke something deep from players' mind. I always keep this in mind and push myself to make <b>artistic</b> and <b>meaningful</b> games.
+                </p>
+
+                <p><b>2. Designs serve goals.</b></p>
+                <p>
+                    Each game should has its major goals it wants to achieve and each single design decision should be made to better serve the goals. It's a good way to prevent designs from going too far.
+                </p>
+
+                <p><b>3. Feedbacks. And more feedbacks.</b></p>
+                <p>
+                    Strong and rich feedbacks are the key for immersive experiences. I try to give as rich feedbacks as possible for each interaction, they can be visual, aural, or even tactile <i>(for VR)</i>. Interactions without rich feedback should not exist in games <i>(unless they are conscious decisions that serve certain design goals)</i>.
+                </p>
+
+                <p><b>4. Iterations are the key.</b></p>
+                <p>
+                    Each game should start small as a prototype and grow through iterations. There is more than once when I started from a small protytpe, playtest it, iterate on it, and finally build something really cool. And there is more than once when playtesters saved my design.
+                </p>
                 <br>
-                <h3 class="text-center"> <a href="http://www.yidizhu.com/blog"> Read my blog </a></h3>
+
+                <h2>More about me</h2>
+                <hr class="star-primary">
+                <h3> <a href="http://www.yidizhu.com/blog">1. My blog </a></h3>
             </article>
         </div>
     </div>
