--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <div class="col-lg-12">
                 <!--<img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt=""> -->
                 <div class="intro-text">
-                    <span class="quote">Crafting artistic meaningful games</span>
+                    <span class="headline">Crafting artistic meaningful games</span>
                     <hr class="star-light">
                     <div class="bio col-lg-8 col-lg-offset-2 text-center">
-                        <p class="objective-statement">
+                        <p class="quote">
                             I'm currently looking for 2018 summer internship in <b>game design</b> and <b>gameplay engineering.</b>
                         </p>
                         <p>
