--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                 <h3>Who am I?</h3>
                 <hr class="star-primary">
                 <p>
-                    My name is Yidi. I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>, and expect to graduate in May 2019.
+                    My name is Yidi (pronounced like <i>Edie</i>). I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>, and expect to graduate in May 2019.
                 </p>
 
                 <p>
