--- a/maestro.html
+++ b/maestro.html
@@ -145,6 +145,8 @@
                     <li>There are several music notes scattered all around the world. They move fast when the guest conducts fast and vice versa</li>
                 </ol>
 
+                <p><i>And guests hear a tapping sound when they tap their baton on the music stand. Every guest who finds this out was amazed!</i></p>
+
                 <p class="notes text-center">To be continued... Website still under construction</p>
 
             </article>
