--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
                 <p><b>1. Games are art.</b></p>
                 <p>
-                    I'm a advocate for <b>"Games are art"</b>. Not only because they can be visually and aurally stunning, but also becuase they are an powerful medium that can invoke something deep from players' mind. I always keep this in mind and push myself to make <b>artistic</b> and <b>meaningful</b> games.
+                    I'm an advocate for <b>"Games are art"</b>. Not only because they can be visually and aurally stunning, but also because they are a powerful medium that can invoke something deep from players' mind. I always keep this in mind and push myself to make <b>artistic</b> and <b>meaningful</b> games.
                 </p>
 
                 <p><b>2. Designs serve goals.</b></p>
@@ -107,12 +107,12 @@
 
                 <p><b>3. Feedbacks. And more feedbacks.</b></p>
                 <p>
-                    Strong and rich feedbacks are the key for immersive experiences. I try to give as rich feedbacks as possible for each interaction, they can be visual, aural, or even tactile <i>(for VR)</i>. Interactions without rich feedback should not exist in games <i>(unless they are conscious decisions that serve certain design goals)</i>.
+                    Strong and rich feedbacks are the key to immersive experiences. I try to give as rich feedbacks as possible for each interaction. They can be visual, aural, or even tactile <i>(for VR)</i>. Interactions without rich feedback should not exist in games <i>(unless they are conscious decisions that serve certain design goals)</i>.
                 </p>
 
                 <p><b>4. Iterations are the key.</b></p>
                 <p>
-                    Each game should start small as a prototype and grow through iterations. There is more than once when I started from a small protytpe, playtest it, iterate on it, and finally build something really cool. And there is more than once when playtesters saved my design.
+                    Each game should start small as a prototype and grow through iterations. There is more than once when I started from a small prototype, playtest it, iterate on it, and finally build something really cool. And there is more than once when playtesters saved my design.
                 </p>
                 <br>
 
