--- a/the-sea.html
+++ b/the-sea.html
@@ -131,27 +131,27 @@
 
                 <h3>My Motivation</h3>
                 <p>
-                    This game is made for round 0 of <i>Building Virtual World</i> class at <i>Entertainment Technology Center</i>. Round 0 aims at familiarize students with Unity. As I've been using Unity for more than a year at that time, I decided to challenge myself by making a narrative-focused game, which I have no experience before.
+                    This game is made for round 0 of <i>Building Virtual World</i> class at <i>Entertainment Technology Center</i>. Round 0 aims at familiarizing students with Unity. As I've been using Unity for more than a year at that time, I decided to challenge myself by making a narrative-focused game, which I have no experience before.
                 </p>
 
                 <p>
-                    When designing this game, I started with the narrative, and came up with specific set of mechanics and rules to serve the core narrative of the game. The storyline is simple: A lantern is put into the river, drifts through different scenes and gets to the sea.
+                    When designing this game, I started with the narrative, and came up with a specific set of mechanics and rules to serve the core narrative of the game. The storyline is simple: A lantern is put into the river, drifts through different scenes and gets to the sea.
                 </p>
 
                 <h3>Design problem and solution</h3>
                 <p>
-                    As this is my first narrative-focued game, I actually didn't know how to do it and need to figure out my own way of doing it. The way I came up with is to start with the <b>feeling</b> I want to give to the player. Based on that, I set the <b>tone and atmosphere</b> of each scene, and sketched the level based on the tone.
+                    As this is my first narrative-focused game, I actually didn't know how to do it and need to figure out my own way of doing it. The way I came up with is to start with the <b>feeling</b> I want to give to the player. Based on that, I set the <b>tone and atmosphere</b> of each scene, and sketched the level based on the tone.
                 </p>
 
                 <p>
-                    After getting the primitive design, I started designing the core mechanics. I wanted to refer to real world scenarios, where the lantern boat is pushed by the flow of river. But that is difficult to visualize in the game and it's not that reasonable for the player to control a whole river. So I found another way of propelling the boat ---- WIND! Once I got this idea, I came up with the core mechanics very easily.
+                    After getting the primitive design, I started designing the core mechanics. I wanted to refer to real-world scenarios, where the lantern boat is pushed by the flow of the river. But that is difficult to visualize in the game and it's not that reasonable for the player to control a whole river. So I found another way of propelling the boat ---- WIND! Once I got this idea, I came up with the core mechanics very easily.
                 </p>
                 <p class="notes">
                     I actually spent a long time learning about mechanics of sailing, but finally found out it's too difficult for me to implement that in one single week. So I got rid of it and went with the most basic <i>classical mechanics</i>.
                 </p>
 
                 <p>
-                    In terms of art, I have a building engineering background and learned some modeling skills by myself. But I can hardly draw 2D graphics or textures. So I decided to go with low-poly art style, which is relatively simple to make but can still be highly expressive and beautiful.
+                    In terms of art, I have a building engineering background and learned some modeling skills by myself. But I can hardly draw 2D graphics or textures. So I decided to go with the low-poly art style, which is relatively simple to make but can still be highly expressive and beautiful.
                 </p>
                 
                 <h3>Results</h3>
@@ -170,9 +170,9 @@
                 </p>
 
                 <h3>Some interesting details</h3>
-                <p>While making this game, I added something details which are hard for players to see, but all who noticed them are surprised to how delicately the game is crafted. </p>
+                <p>While making this game, I added something details which are hard for players to see, but all who noticed them are surprised at how delicately the game is crafted. </p>
                 <ol>
-                    <li>Windmills are scattered on the river side to show the wind direction.</li>
+                    <li>Windmills are scattered on the riverside to show the wind direction.</li>
                     <li>The sound of thunder appears around 1 seconds after the lightning, which simulates the real world situation.</li>
                     <li>The boat only picks the "fruit part" of pick-ups and the lotus sinks after its fruit is picked up.</li>
                 </ol>
