--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="row">
 
             <div class="col-lg-4 col-md-6 portfolio-item">
-                <a href="http://www.yidizhu.com/tree.html" class="portfolio-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/althea.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Althea</i>
