--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
                 <p><b>1. Games are art.</b></p>
                 <p>
-                    I'm an advocate for <b>"Games are art"</b>. Not only because they can be visually and aurally stunning, but also because they are a powerful medium that can invoke something deep from players' mind. I always keep this in mind and push myself to make <b>artistic</b> and <b>meaningful</b> games.
+                    I'm an advocate for <b>"Games are art"</b>. Part of it is because games can be visually and aurally stunning, but more importantly, the interactivity in games makes them stand out from other art forms. <b>Mechanics</b> are the most powerful way to invoke emotions and inspire people.
                 </p>
 
                 <p><b>2. Designs serve goals.</b></p>
@@ -107,7 +107,7 @@
 
                 <p><b>3. Feedbacks. And more feedbacks.</b></p>
                 <p>
-                    Strong and rich feedbacks are the key to immersive experiences. I try to give as rich feedbacks as possible for each interaction. They can be visual, aural, or even tactile <i>(for VR)</i>. Interactions without rich feedback should not exist in games <i>(unless they are conscious decisions that serve certain design goals)</i>.
+                    Strong and rich feedbacks are the key to immersive experiences. I try to give as rich feedbacks as possible for each interaction. They can be visual, aural, or even tactile when possible. Interactions without rich feedback should not exist in games <i>(unless they are conscious decisions that serve certain design goals)</i>.
                 </p>
 
                 <p><b>4. Iterations are the key.</b></p>
