--- a/althea.html
+++ b/althea.html
@@ -72,7 +72,7 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2>SHU</h2>
+                <h2>Althea</h2>
                 <hr class="star-primary">
                 <h3>General Information</h3>
                 <div class="table-responsive">
