--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 </p>
 
                 <p>
-                    I'm also remotely leading a small indie game company based in Hong Kong. We dedicate ourselves to making games that are delicate and intrinsically fun.
+                    I'm also remotely leading a small indie game company based in Hong Kong. We dedicate ourselves to crafting intrinsically fun games.
                 </p>
 
                 <h3>What do I do?</h3>
