--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             I'm currently looking for 2018 summer internship in <b>game design</b> and <b>gameplay engineering.</b>
                         </p>
                         <p>
-                            Hi there, I'm Yidi! I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>. I dedicate myself to making  fun and meaningful games.
+                            Hi there, I'm Yidi! I am a passionate <i>game designer and programmer</i>. I'm currently pursuing my <b>Master of Entertainment Technology</b> degree at the <i>Entertainment Technology Center</i> of <i>Carnegie Mellon University</i>. I dedicate myself to making games that have positive impact on people, and the world.
                         </p>
                         <!--
                         <p>
