--- a/404.html
+++ b/404.html
@@ -27,7 +27,6 @@
 
 <body id="page-top" class="index">
 
-
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,10 +44,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-design">Design</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-programming">Programming</a>
+                    <a href="http://www.yidizhu.com">Home</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
