--- a/about.html
+++ b/about.html
@@ -44,10 +44,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-design">Design</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-programming">Programming</a>
+                    <a href="http://www.yidizhu.com">Home</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
@@ -85,7 +82,11 @@
                 <h3>What do I do?</h3>
                 <hr class="star-primary">
                 <p>
-                    I make games. Sometimes also other interactive experiences. It's my dream to spend my life making games and it's coming true.
+                    I make games. Sometimes also other interactive experiences. It's my dream to spend my life making games, and, I'm living my dream.
+                </p>
+
+                <p>
+                    Beside games, I play the guitar, make handcrafts, swim, play badminton, and travel.
                 </p>
 
                 <h3>What's my design philosophy?</h3>
@@ -115,7 +116,7 @@
 
                 <h2>More about me</h2>
                 <hr class="star-primary">
-                <h3> <a href="http://www.yidizhu.com/blog">1. My blog </a></h3>
+                <h3> <a href="http://www.yidizhu.com/blog">My blog </a></h3>
             </article>
         </div>
     </div>
