--- a/primal-life.html
+++ b/primal-life.html
@@ -44,10 +44,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-design">Design</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#game-programming">Programming</a>
+                    <a href="http://www.yidizhu.com">Home</a>
                 </li>
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/resources/resume.pdf" target="_blank">Resume</a>
@@ -72,7 +69,7 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2>Totally Accurate Primitive Simulator <br>(Primal Life)</h2>
+                <h2>Totally Accurate Primitive Simulator</h2>
                 <hr class="star-primary">
 
                 <h3>General Information</h3>
